[BM-143] :sparkles: 상품 상세 조회 결과에 작성자 추가